# pokoappdb

./: CMakeLists.txt  README.md
data/: pokemon_1.csv
include/: pokeDB.hpp  pokeapp.hpp  pokemontype.hpp
src/: auxfunctions.cpp  auxfunctions.hpp  main.cpp  pokeDB.cpp  pokeDB.hpp  pokeapp.cpp  pokemon.cpp  pokemon.hpp  pokemontype.cpp  pokemontype.hpp
tests/: CMakeLists.txt  test_data.csv  test_pokeDB.cpp  test_pokemon.cpp  test_pokemontype.cpp
