cmake_minimum_required(VERSION 3.16)

project(poke_db
    VERSION 0.1.0
    LANGUAGES CXX
)


set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(poke_db
    src/main.cpp
    src/pokemontype.cpp
    src/pokemon.cpp
    src/auxfunctions.cpp
    
)

target_compile_options(poke_db PRIVATE -Wall -Wextra -Wpedantic)